Fix image feature image sizing on mobile

--- a/app/static/less/theme.less
+++ b/app/static/less/theme.less
@@ -212,5 +212,9 @@
       margin-bottom: 1.04em;
     }
   }
-
+}
+.feature{
+  img{
+	width: 100%;
+  }
 }
